Semi-final version

--- a/pages/html/blackspace.html
+++ b/pages/html/blackspace.html
@@ -25,5 +25,15 @@
             <h2 class="omori-font-text">WELCOME TO BLACKSPACE</h2>
         </section>
     </main>
+
+    <footer>
+    <div class="footer-items">
+        <a id="goBack" href="/pages/html/homePage.html">Voltar à página principal</a>
+        <div class="footer-mention">
+          <a href="">@hrkms</a> & <a href="">@criperrr</a>
+        </div>
+    </div>
+    </footer>
+
 </body>
 </html>
