--- a/pages/html/faraway.html
+++ b/pages/html/faraway.html
@@ -116,9 +116,13 @@
     </main>
 
     <footer>
+    <div class="footer-items">
         <a id="goBack" href="/pages/html/homePage.html">Voltar à página principal</a>
-        <p id="btInfo">oioio</p>
-    </footer>
+        <div class="footer-mention">
+          <a href="">@hrkms</a> & <a href="">@criperrr</a>
+        </div>
+    </div>
+  </footer>
 
     <dialog id="imageModal" class="modal-overlay">
         <div class="modal-content gallery-modal">
