--- a/pages/html/homePage.html
+++ b/pages/html/homePage.html
@@ -16,7 +16,7 @@
     </div>
   </header>
 
-  <a id="goBack" href="/index.html">Voltar ao WHITESPACE</a>
+  
 
   <nav aria-label="Navegação principal" class="fade-in-element">
     <ul>
@@ -85,7 +85,7 @@
       </div>
     </section>
   </main>
-  <footer id="blackspace-content">
+  <div id="blackspace-content">
     <section class="fade-in-element"  id="content-1">
       <h1 class="bs-title">Sunny...</h1>
     </section>
@@ -105,6 +105,15 @@
         draggable="false"
       />
     </figure>
+  </div>
+
+  <footer>
+    <div class="footer-items">
+        <a id="goBack" href="/index.html">Voltar ao WHITESPACE</a>
+        <div class="footer-mention">
+          <a href="">@hrkms</a> & <a href="">@criperrr</a>
+        </div>
+    </div>
   </footer>
 
   <dialog id="imageModal" class="modal-overlay">
