--- a/pages/html/headspace.html
+++ b/pages/html/headspace.html
@@ -17,8 +17,6 @@
         </div>
     </header>
 
-    <a id="goBack" href="/pages/html/homePage.html">Voltar à página principal</a>
-
 
 
     <main id="main-content">
@@ -112,13 +110,23 @@
                     class="gallery-image"
                     src="/media/image/Album_headspace/DW_ALBUM_09.webp" 
                     alt="real-album" 
-                    data-description="'Todos os nossos pés formando um círculo! Consegue adivinhar de quem é cada pé?'"
+                    data-description="'Todos os nossos pés formando um círculo! Consegue adivinhar de quem é cada pé?'
+"
                     draggable="false"
                 />
                 </figure>
             </div>
         </section>
     </main>
+
+    <footer>
+    <div class="footer-items">
+        <a id="goBack" href="/pages/html/homePage.html">Voltar à página principal</a>
+        <div class="footer-mention">
+          <a href="">@hrkms</a> & <a href="">@criperrr</a>
+        </div>
+    </div>
+  </footer>
 
     <dialog id="imageModal" class="modal-overlay">
         <div class="modal-content gallery-modal">
