--- a/pages/html/headspace.html
+++ b/pages/html/headspace.html
@@ -121,12 +121,13 @@
 
     <footer>
     <div class="footer-items">
-        <a id="goBack" href="/pages/html/homePage.html">Voltar à página principal</a>
-        <div class="footer-mention">
-          <a href="">@hrkms</a> & <a href="">@criperrr</a>
-        </div>
+      <a id="icon-goBack" href="/pages/html/homePage.html" draggable="false">Voltar</a>
+      <a id="text-goBack" href="/pages/html/homePage.html" draggable="false">Voltar à página principal</a>
+      <div class="footer-mention">
+        <a href="https://github.com/henriqclaro" draggable="false">@hrkms</a> & <a href="https://github.com/criperrr" draggable="false">@criperrr</a>
+      </div>
     </div>
-  </footer>
+    </footer>
 
     <dialog id="imageModal" class="modal-overlay">
         <div class="modal-content gallery-modal">
