--- a/pages/html/homePage.html
+++ b/pages/html/homePage.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>OMORI</title>
   <link rel="icon" href="/media/image/omori_sprite_icon.png" type="image/x-icon" />
   <link rel="stylesheet" href="/pages/styles/homePage.css" />
-  <script defer src="/pages/scripts/headsPase.js"></script>
+  <script defer src="/pages/scripts/headsPace.js"></script>
 </head>
+
 <body>
   <header id="header">
     <div id="background-layer" aria-hidden="true"></div>
@@ -16,7 +18,7 @@
     </div>
   </header>
 
-  
+
 
   <nav aria-label="Navegação principal" class="fade-in-element">
     <ul>
@@ -30,12 +32,16 @@
     <section class="content fade-in-element" aria-labelledby="main-title">
       <h2 id="main-title">O que é OMORI?</h2>
       <p>
-        OMORI é um jogo RPG de terror psicológico desenvolvido por OMOCAT. Lançado inicialmente como um projeto de crowdfunding, o jogo combina elementos de exploração, combate por turnos e narrativa envolvente. Os jogadores assumem o papel de OMORI, um personagem que vive em um mundo onírico e surreal, enquanto exploram temas de amizade, perda e auto-descoberta.
+        OMORI é um jogo RPG de terror psicológico desenvolvido por OMOCAT. Lançado inicialmente como um projeto de
+        crowdfunding, o jogo combina elementos de exploração, combate por turnos e narrativa envolvente. Os jogadores
+        assumem o papel de OMORI, um personagem que vive em um mundo onírico e surreal, enquanto exploram temas de
+        amizade, perda e auto-descoberta.
       </p>
       <br>
       <p>
         Você joga como OMORI, inicialmente, um garoto que vive no mund dos sonhos, chamado HEADSPACE.
-        Ao longo do jogo, você encontrará seus amigos, como AUBREY, KEL e HERO, e enfrentará desafios emocionais e psicológicos. 
+        Ao longo do jogo, você encontrará seus amigos, como AUBREY, KEL e HERO, e enfrentará desafios emocionais e
+        psicológicos.
       </p>
       <br>
 
@@ -51,42 +57,33 @@
       </p>
       <br>
       <p>
-        Abaixo, estão as fotos que estão no mundo do sonhos (memórias de infância do SUNNY) e no mundo real, ainda existente.
+        Abaixo, estão as fotos que estão no mundo do sonhos (memórias de infância do SUNNY) e no mundo real, ainda
+        existente.
       </p>
     </section>
 
     <section class="pages fade-in-element">
-      <h1 id="galeria" style="font-size: 4rem;" >Galeria</h1>
-      
+      <h1 id="galeria" style="font-size: 4rem;">Galeria</h1>
+
       <div class="pages-content">
         <figure>
-          <img 
-            class="gallery-image"
-            src="/media/image/elements/single/Album_piquinique.webp" 
-            alt="headspace-album" 
+          <img class="gallery-image" src="/media/image/elements/single/Album_piquinique.webp" alt="headspace-album"
             data-description="Depois de comer, OMORI e seus amigos caem no sono, com exceção do HERO e MARI."
-            data-link="headspace.html"
-            draggable="false"
-          />
-          <figcaption >HEADSPACE</figcaption>
+            data-link="headspace.html" draggable="false" />
+          <figcaption>HEADSPACE</figcaption>
         </figure>
 
         <figure>
-          <img 
-            class="gallery-image"
-            src="/media/image/elements/single/Album_real.webp" 
-            alt="real-album" 
+          <img class="gallery-image" src="/media/image/elements/single/Album_real.webp" alt="real-album"
             data-description="SUNNY e seus amigos num piquinique arranjando por sua irmã, MARI."
-            data-link="faraway.html"
-            draggable="false"
-          />
-          <figcaption >MUNDO REAL</figcaption>
+            data-link="faraway.html" draggable="false" />
+          <figcaption>MUNDO REAL</figcaption>
         </figure>
       </div>
     </section>
   </main>
   <div id="blackspace-content">
-    <section class="fade-in-element"  id="content-1">
+    <section class="fade-in-element" id="content-1">
       <h1 class="bs-title">Sunny...</h1>
     </section>
     <section class="fade-in-element" id="content-2">
@@ -96,23 +93,18 @@
       <h1 class="bs-title">Eu sempre estarei ao seu lado.</h1>
     </section>
     <figure>
-      <img 
-        class="gallery-image"
-        src="/media/image/elements/single/blackspace_hole.png"
-        alt="Buraco para o Blackspace"
-        data-description="Você NÃO pode se esconder de si mesmo."
-        data-link="blackspace.html"
-        draggable="false"
-      />
+      <img class="gallery-image" src="/media/image/elements/single/blackspace_hole.png" alt="Buraco para o Blackspace"
+        data-description="Você NÃO pode se esconder de si mesmo." data-link="blackspace.html" draggable="false" />
     </figure>
   </div>
 
   <footer>
     <div class="footer-items">
-        <a id="goBack" href="/index.html">Voltar ao WHITESPACE</a>
-        <div class="footer-mention">
-          <a href="">@hrkms</a> & <a href="">@criperrr</a>
-        </div>
+      <a id="icon-goBack" href="/index.html" draggable="false">Voltar</a>
+      <a id="text-goBack" href="/index.html" draggable="false">Voltar ao WHITESPACE</a>
+      <div class="footer-mention">
+        <a href="https://github.com/henriqclaro" draggable="false">@hrkms</a> & <a href="https://github.com/criperrr" draggable="false">@criperrr</a>
+      </div>
     </div>
   </footer>
 
@@ -127,4 +119,5 @@
 
   <script src="/pages/scripts/homePage.js"></script>
 </body>
+
 </html>
