blackspace: added blackspace elements

--- a/pages/html/blackspace.html
+++ b/pages/html/blackspace.html
@@ -22,12 +22,66 @@
         <section class="intro">
             <h2 class="omori-font-text">WELCOME TO BLACKSPACE</h2>
         </section>
-        <section class="images fade-in-element">
+        <section class="images fade-in-element" id="gallery">
             <div class="images-content">
                 <figure>
                 <img 
                     class="gallery-image"
-                    src="/media/image/" 
+                    src="/media/image/Album_blackspace/Dorothi.gif" 
+                    alt="headspace-album" 
+                    data-description="EU NÃO ESTOU COM CABEÇA PARA FAZER MAIS NADA SÃO 01:11 DA MANHÃ E NEM FIZ ED FISICA AINDA"
+                    draggable="false"
+                />
+                </figure>
+                <figure>
+                <img 
+                    class="gallery-image"
+                    src="/media/image/Album_blackspace/Cindi.gif" 
+                    alt="headspace-album" 
+                    data-description=""
+                    draggable="false"
+                />
+                </figure>
+                <figure>
+                <img 
+                    class="gallery-image"
+                    src="/media/image/Album_blackspace/Lilli.gif" 
+                    alt="headspace-album" 
+                    data-description=""
+                    draggable="false"
+                />
+                </figure>
+                <figure>
+                <img 
+                    class="gallery-image"
+                    src="/media/image/Album_blackspace/Merci.gif" 
+                    alt="headspace-album" 
+                    data-description=""
+                    draggable="false"
+                />
+                </figure>
+                <figure>
+                <img 
+                    class="gallery-image"
+                    src="/media/image/Album_blackspace/Nanci.gif" 
+                    alt="headspace-album" 
+                    data-description=""
+                    draggable="false"
+                />
+                </figure>
+                <figure>
+                <img 
+                    class="gallery-image"
+                    src="/media/image/Album_blackspace/Salli.gif" 
+                    alt="headspace-album" 
+                    data-description=""
+                    draggable="false"
+                />
+                </figure>
+                <figure>
+                <img 
+                    class="gallery-image"
+                    src="/media/image/Album_blackspace/SOMETHING.png" 
                     alt="headspace-album" 
                     data-description=""
                     draggable="false"
