--- a/pages/html/faraway.html
+++ b/pages/html/faraway.html
@@ -20,7 +20,7 @@
         <section class="fade-in-element">
             <h2 class="omori-font-text">WELCOME TO FARAWAY TOWN</h2>
         </section>
-        <section class="images fade-in-element">
+        <section class="images fade-in-element" id="gallery">
             <div class="images-content">
                 <figure>
                 <img 
