--- a/pages/html/headspace.html
+++ b/pages/html/headspace.html
@@ -23,7 +23,7 @@
         <section class="fade-in-element">
             <h2 class="omori-font-text">WELCOME TO HEADSPACE</h2>
         </section>
-        <section class="images fade-in-element">
+        <section class="images fade-in-element" id="gallery">
             <div class="images-content">
                 <figure>
                 <img 
